--- a/index.html
+++ b/index.html
@@ -11,6 +11,28 @@
 
 <body>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Product</a>
+            <a href="#">Pricing</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a> <img src="src/logo.png" alt="figma logo">
+            <img src="src/twitter_logo.png" alt="twitter logo">
+            <img src="src/fb_logo.png" alt="facebook logo">
+            <img src="src/in_logo.png" alt="instagram logo">
+        </nav>
+    </header>
+    <main>
+        <h1>The best products starts with figma</h1>
+        <h4>Most calendars are designed for teams. Slate is designed for freelancers</h4>
+        <button href="#">Try for free</button>
+        <h2>Features</h2>
+        <h4>Most calendars are designed for teams. Slate is designed for freelancers</h4>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
