--- a/index.html
+++ b/index.html
@@ -33,11 +33,27 @@
             <h2>Features</h2>
             <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
             <div class="Features__descriptoin">
-                <div class="Features__descriptoin__1">
+                <div class="Features__description__1">
                     <img src="img/figures.png" alt="figures">
                     <h3>OpenType features</h3>
                     <h3>Veriable fonts</h3>
                     <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
+                </div>
+                <div class="Features__description__2">
+                    <img src="img/brush.png" alt="pencil">
+                    <h3>Design with real data</h3>
+                    <p>Slate helps you see how 
+                        many more days you need 
+                        to work to reach your 
+                        financial goal.</p>
+                </div>
+                <div class="Features__description__3">
+                    <img src="img/brush.png" alt="brush">
+                    <h3>Fastest way to take action</h3>
+                    <p>Slate helps you see how 
+                        many more days you need 
+                        to work to reach your 
+                        financial goal.</p>
                 </div>
             </div>
         </section>
