--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <a href="#">About</a>
             <a href="#">Contact</a>
         </nav>
-        <img src="img/logo.png" alt="figma logo">
+        <img src="img/figma_logo.png" alt="figma logo">
         <div class="header__social-logo">
             <img src="img/twitter_logo.png" alt="twitter logo">
-            <img src="img/fb_logo.png" alt="facebook logo">
-            <img src="img/in_logo.png" alt="instagram logo">
+            <img src="img/facebook_logo.png" alt="facebook logo">
+            <img src="img/instagram_logo.png" alt="instagram logo">
         </div>
     </header>
     <main>
@@ -37,27 +37,44 @@
                     <img src="img/figures.png" alt="figures">
                     <h3>OpenType features</h3>
                     <h3>Veriable fonts</h3>
-                    <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
+                    <p>Slate helps you see how
+                        many more days you need
+                        to work to reach your
+                        financial goal.</p>
                 </div>
                 <div class="Features__description__2">
-                    <img src="img/brush.png" alt="pencil">
+                    <img src="img/pencil.png" alt="pencil">
                     <h3>Design with real data</h3>
-                    <p>Slate helps you see how 
-                        many more days you need 
-                        to work to reach your 
+                    <p>Slate helps you see how
+                        many more days you need
+                        to work to reach your
                         financial goal.</p>
                 </div>
                 <div class="Features__description__3">
                     <img src="img/brush.png" alt="brush">
                     <h3>Fastest way to take action</h3>
-                    <p>Slate helps you see how 
-                        many more days you need 
-                        to work to reach your 
+                    <p>Slate helps you see how
+                        many more days you need
+                        to work to reach your
                         financial goal.</p>
                 </div>
             </div>
+            <img src="img/girl_with_notepad.png" alt="girl with notepad">
         </section>
-
+        <section class="Fastest-way-to-organize">
+            <h2>Fastest way to organize</h2>
+            <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
+            <a href="#">Try For Free</a>
+            <img src="img/notebook.png" alt="notebook">
+        </section>
+        <section class="Lightning-fast-prototyping ">
+            <p>At your fingertips</p>
+            <h2>Lightning fast prototyping</h2>
+            <p>Subscribe to our Newsletter</p>
+            <p>Available exclusivery on Figmaland</p>
+            <input type="text" placeholder="Your Email">
+            <input type="submit" value="Subscribe">
+        </section>
     </main>
     <footer>
 
