index.html updated

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
         </div>
     </header>
     <main>
-        <h1>The best products starts with figma</h1>
-        <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
-        <a href="#">Try for free</a>
+        <section class="Title">
+            <h1>The best products starts with figma</h1>
+            <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
+            <a href="#">Try for free</a>
+        </section>
         <section class="Features">
             <h2>Features</h2>
             <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
@@ -74,6 +76,27 @@
             <p>Available exclusivery on Figmaland</p>
             <input type="text" placeholder="Your Email">
             <input type="submit" value="Subscribe">
+        </section>
+        <section class="Partners">
+            <h2>Partners</h2>
+            <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
+            <img src="img/companies_logos.png" alt="partners companies logos">
+            <a href="#">Try For Free</a>
+        </section>
+        <section class="Testimonials">
+            <h2>Testimonials</h2>
+            <img src="img/ibm_logo.png" alt="IBM logo">
+            <p>Most calendars are designed for teams. Slate is designed for freelancers
+                who want a simple way to plan their schedule.</p>
+            <div>
+                <img src="img/ui_designer_photo.png" alt="photo of Ui designer">
+                <p>Organize across Ui designer</p>
+            </div>
+            <a href="#">More Testimonials</a>
+        </section>
+        <section class="Pricing">
+            <h2>Pricing</h2>
+            <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
         </section>
     </main>
     <footer>
